# cocoindex-code

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EMBEDDINGS.md  Makefile  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.txt  README.md  SECURITY.md  pyproject.toml  pytest.ini  server.json  session-ses_322e.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docker-publish.yml  pre-commit.yml  release.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: FORK_STRATEGY.md  MULTI_REPO_SUPPORT.md  README.md  docker-layered-indexing.md  layered-indexing.md
docs/adr/: README.md  cache-invalidation.md  postgres-backend.md
docs/plans/: 2026-02-25-configurable-batch-size-design.md  2026-02-25-configurable-batch-size.md
hooks/: hooks.json
packaging/launchd/: com.cocoindex.daemon.plist
rust/: .gitignore  Cargo.toml  PORTING.md  README.md
rust/src/: client.rs  daemon.rs  daemon_paths.rs  db.rs  embedder.rs  embedder_params.rs  indexer.rs  main.rs  mcp.rs  project.rs  protocol.rs  query.rs  schema.rs  settings.rs  walk.rs
rust/tests/: README.md  e2e_advanced.sh  e2e_cli.sh
sample/: Makefile  README.md  docker-compose.yml
skills/ccc/: SKILL.md
skills/ccc/references/: management.md  settings.md
src/cocoindex_code/: __init__.py  __main__.py  _daemon_paths.py  _matchers.py  cgrep.py  change_detection.py  chunking.py  cli.py  client.py  code_graph_indexer.py  code_intelligence_tools.py  config.py  daemon.py  declarations_db.py  declarations_graph.py  embedder.py  embedder_defaults.py  file_walk.py  filesystem_tools.py  git_context.py  github_auth.py  github_mirror.py  grep.py  hybrid_search.py  indexer.py  install.py  lance_indexer.py  layer_store.py  layered_project.py  litellm_embedder.py  mcp_handlers.py  multi_repo.py  netprobe.py  project.py  protocol.py  query.py  render.py  rg_bounded.py  runtime_patches.py  schema.py  (+11 more)
src/cocoindex_code/analytics/: __init__.py  centrality.py  communities.py  flows.py  knowledge_gaps.py
src/cocoindex_code/builtin_chunkers/: __init__.py  ast_chunker.py  notebook_chunker.py  prisma_chunker.py  smart_bash_chunker.py  smart_go_chunker.py  smart_java_chunker.py  smart_md_chunker.py  smart_py_chunker.py  smart_rust_chunker.py  smart_ts_chunker.py  smart_yaml_chunker.py  tree_sitter_util.py  workspace_chunker.py
src/cocoindex_code/layers/: __init__.py  layer.py  layer_kind.py  layer_manifest.py  layer_paths.py  layer_runtime.py  layer_stack.py  layer_store.py
src/cocoindex_code/version_control/: __init__.py  branch.py  change_set.py  git.py  repository.py  worktree.py
tests/: benchmark_turbo_quant.py  conftest.py  test_analytics.py  test_backward_compat.py  test_cgrep.py  test_change_detection.py  test_chunker_registry.py  test_cli_helpers.py  test_client.py  test_code_graph_indexer.py  test_config.py  test_daemon.py  test_daemon_idle.py  test_daemon_paths.py  test_daemon_registry.py  test_declarations_db_migrations.py  test_declarations_graph.py  test_docker_setup.py  test_e2e.py  test_e2e_backend.py  test_e2e_daemon.py  test_embedder.py  test_embedder_defaults.py  test_filesystem_tools.py  test_git_layers.py  test_github_auth.py  test_github_mirror_mock.py  test_grep.py  test_hybrid_search.py  test_indexer_gitignore.py  test_indexer_helpers.py  test_integration_coco.py  test_lance_indexer.py  test_large_write.py  test_litellm_embedder.py  test_mcp_codebase_tools.py  test_mcp_wrappers.py  test_multi_repo.py  test_multi_repo_behavioral.py  test_netprobe.py  (+14 more)
tests/builtin_chunkers/: conftest.py  test_ast_chunker.py  test_prisma_chunker.py  test_smart_bash_chunker.py  test_smart_go_chunker.py  test_smart_java_chunker.py  test_smart_md_chunker.py  test_smart_py_chunker.py  test_smart_rust_chunker.py  test_smart_ts_chunker.py  test_smart_yaml_chunker.py  test_workspace_chunker.py
tests/e2e_docker/: test_docker_workspace.py
