[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cocoindex-code"
dynamic = ["version"]
description = "MCP server for indexing and querying codebases using CocoIndex"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["mcp", "codebase", "indexing", "vector-search", "cocoindex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "cocoindex[litellm]>=1.0.0,<1.1.0",
    "sqlite-vec>=0.1.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "einops>=0.8.2",
    "typer>=0.9.0",
    "msgspec>=0.19.0",
    "pathspec>=0.12.1",
    "pyyaml>=6.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
# Pulls in sentence-transformers so local embeddings work without an API key.
embeddings-local = ["cocoindex[sentence-transformers]>=1.0.0,<1.1.0"]
analytics = [
    "networkx>=3.0",
    "igraph>=0.11.0",
]
# Portable LanceDB semantic-search index (coco-lance entry point).
lancedb = [
    "lancedb>=0.25.0",
    "pyarrow>=19.0.0",
    "cocoindex[sentence-transformers,lancedb]>=1.0.0,<1.1.0",
]
# Umbrella alias: local embeddings + analytics + LanceDB indexer.
# Contents inlined (not self-referencing) to avoid resolver edge cases with older pip.
full = [
    "cocoindex[sentence-transformers,lancedb]>=1.0.0,<1.1.0",
    "networkx>=3.0",
    "igraph>=0.11.0",
    "lancedb>=0.25.0",
    "pyarrow>=19.0.0",
]

[project.scripts]
cocoindex-code = "cocoindex_code:main"
ccc = "cocoindex_code.cli:app"
cgrep = "cocoindex_code.cgrep:main"
coco-lance = "cocoindex_code.lance_indexer:main"

[project.urls]
Homepage = "https://github.com/cocoindex-io/cocoindex-code"
Repository = "https://github.com/cocoindex-io/cocoindex-code"
Issues = "https://github.com/cocoindex-io/cocoindex-code/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "999.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/cocoindex_code/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cocoindex_code"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]

# PEP 735 dependency groups — used by `uv sync --group dev`.
# [project.optional-dependencies].dev is intentionally absent; pip users should
# use `uv` or install the packages listed here manually.
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "prek>=0.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "cocoindex[sentence-transformers]>=1.0.0,<1.1.0",
    "networkx>=3.0",
    "igraph>=0.11.0",
    "lancedb>=0.25.0",
    "pyarrow>=19.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
exclude = ["^tests/", "^tests/e2e_docker_fixtures/"]

[[tool.mypy.overrides]]
# lancedb ships no py.typed marker; cocoindex's lancedb connector stubs live
# in the cocoindex package itself and are resolved there.
module = ["lancedb.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy stubs are present but NDArray generics produce false positives under
# strict mode when used inside Annotated[] metadata for cocoindex ContextKey.
module = ["numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# igraph, leidenalg, networkx, sqlite_vec ship no py.typed marker; optional deps.
module = ["igraph", "igraph.*", "leidenalg", "leidenalg.*", "networkx", "networkx.*", "sqlite_vec", "sqlite_vec.*", "tree_sitter_languages", "tree_sitter_languages.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/cocoindex_code"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not docker_e2e'"
asyncio_mode = "auto"
markers = [
    "docker_e2e: requires Docker; builds the image and runs containerized E2E tests. Run with: pytest -m docker_e2e",
]
